--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@supabase/supabase-js": "^2.47.3",
+    "bcryptjs": "^2.4.3",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
